--- a/src/it/multimodule-embedded-parent/parent/pom.xml
+++ b/src/it/multimodule-embedded-parent/parent/pom.xml
@@ -19,6 +19,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>com.redhat.rcm</groupId>
+    <artifactId>redhat-releng-tools</artifactId>
+    <version>12</version>
+  </parent>
+
   <groupId>org.test</groupId>
   <artifactId>test-embedded-parent</artifactId>
   <version>1.0-SNAPSHOT</version>
@@ -29,6 +35,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <enforcer.skip>true</enforcer.skip>
   </properties>
 
   <build>
